# seftali

./: .gitignore  .replit  CONTRIBUTING.md  DATABASE_RELATIONSHIPS.md  DATABASE_SCHEMA.md  GITHUB_DEPLOYMENT.md  README.md  ROADMAP.md  ROADMAP_SUMMARY.md  SEED_README.md  backend_test.py  check_sales_rep.py  check_users.py  create_sales_rep.py  debug_consumption.py  debug_sed_parsing.py  demo_users.json  design_guidelines.json  design_guidelines.md  import_demo_users.py  package-lock.json  package.json  push-to-github.sh  pyproject.toml  replit.md  sed_invoice_test.py  start_backend.sh  start_frontend.sh  test_password.py  test_result.md
.emergent/: emergent.yml  summary.txt
attached_assets/: Pasted--Uygulama-i-i-mesajla-ma-endpoint-leri-from-datetime-im_1778238058809.txt  Pasted-Create-a-reusable-modal-component-called-RouteActionMod_1778094143693.txt  Pasted-Update-the-existing-Rota-tab-of-the-Plasiyer-Panel-to-m_1778092713412.txt  Pasted-diff-git-a-backend-routes-messaging-routes-py-b-backend_1778238265417.txt
backend/: bulk_calculate_consumption.py  calculate_daily_consumption.py  clean_database.py  cleanup_users.py  create_all_demo_users.py  create_consumption_history.py  create_weekly_consumption.py  import_ailem_market.py  import_ailem_market_67.py  import_excel_consumption.py  main.py  recalculate_consumption.py  requirements.txt  reset_demo_accounts.py  seed_20_products_orders.py  seed_accounting_users.py  seed_advanced_campaigns.py  seed_campaigns.py  seed_complete_system.py  seed_data.py  seed_maintenance_data.py  seed_phase2_data.py  seed_production_data.py  (+7 more)
(+336 files in other folders)
