[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.43.4",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.27",
    "reportlab>=4.5.0",
    "requests>=2.33.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.46.0",
]
